--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a href="http:https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link"
+          <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link"
             target="_blank">Facebook</a>
         </div>
         <img src="./images/place-altai.jpg" alt="Фотография ноутбука фоне леса Алтая" class="place__image">
