--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="header__lang-item"><a href="#" class="header__lang-link" target="_self">En</a></li>
       </ul>
     </header>
-    <main>
+    <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
