--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <title>Путешествие по России</title>
 </head>
 
-<body class="root">
+<body>
   <div class="page">
     <header class="header">
       <img src="./images/header-logo.svg" alt="Карта с изображением России" class="header__logo">
       <ul class="header__lang-links">
         <li class="header__lang-item"><a href="#" class="header__lang-link header__lang-link_active"
-            target="_self">Ru</a>
-        </li>
+            target="_self">Ru</a></li>
         <li class="header__lang-item"><a href="#" class="header__lang-link" target="_self">En</a></li>
       </ul>
     </header>
@@ -37,13 +36,11 @@
           смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
           километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__list-item">Часовых поясов <span class="intro__span-accent">11</span></li>
-          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span>
-          </li>
-          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span>
-          </li>
-          <li class="intro__list-item">Природных заповедников <span class="intro__span-accent">105</span></li>
-          <li class="intro__list-item">Аэропортов <span class="intro__span-accent">241</span></li>
+          <li><span class="intro__span-accent">Часовых поясов</span> 11</li>
+          <li><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li><span class="intro__span-accent">Природных заповедников</span> 105</li>
+          <li><span class="intro__span-accent">Аэропортов</span> 241</li>
         </ul>
       </section>
       <section class="photo-grid">
@@ -168,8 +165,8 @@
         </a>
       </section>
     </main>
-    <section class="footer">
-      <nav class="footer__nav">
+    <footer class="footer">
+      <nav>
         <ul class="footer__list">
           <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
           </li>
@@ -184,7 +181,8 @@
         </ul>
       </nav>
       <p class="footer__author">&copy; 2022. Аржаана Ондар</p>
-    </section>
+      </nav>
+    </footer>
   </div>
 </body>
 
